# crm_app

./: pyproject.toml
My_crm/: manage.py
My_crm/My_crm/: asgi.py  settings.py  urls.py  wsgi.py
