[tool.poetry]
name = "crm-app"
version = "0.1.0"
description = "this is simple app to make crm_app using djanog"
authors = ["Exoutia <jhav365@gmail.com>"]
readme = "README.md"
packages = [{include = "crm_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
mysql = "^0.0.3"
mysql-connector-python = "^8.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
